# stranger-beers-app

./: .dockerignore  .env.example  .gitignore  Dockerfile.ingestion  Makefile  README.md  pyproject.toml  railway.json
apps/comms_service/: pyproject.toml
apps/comms_service/src/: __init__.py
apps/ingestion_api/: alembic.ini  pyproject.toml
apps/ingestion_api/.claude/: settings.local.json
apps/ingestion_api/src/: __init__.py  config.py  db.py  main.py  models.py
apps/ingestion_api/src/migrations/: __init__.py  env.py
apps/ingestion_api/src/migrations/versions/: 20241213_0001_initial_tables.py  20260108_0002_add_form_fields.py  20260108_0003_simplify_tally_submissions.py  20260108_0004_simplify_for_payments.py
apps/ingestion_api/src/services/: __init__.py  payment.py  signup.py
apps/ingestion_api/src/tally/: __init__.py  parse.py  verify.py
apps/matching_service/: pyproject.toml
apps/matching_service/src/: __init__.py
tests/: __init__.py  test_ingestion_api.py  test_shared.py
