[project]
name = "stranger-beers-ingestion-api"
version = "0.1.0"
description = "FastAPI webhook receiver for Tally form submissions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "phonenumbers>=8.13",
    "stranger-beers-shared",
    "stranger-beers-db",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
